--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ Pillow==10.1.0
 google-search-results==2.4.2
 requests==2.31.0
 
-# OpenAI integration
-openai==1.3.0
+# OpenAI integration  
+openai==1.35.0
+httpx
 
 # Security
 cryptography==41.0.4
