--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ google-search-results==2.4.2
 requests==2.31.0
 
 # OpenAI integration  
-openai==1.35.0
-httpx
+openai>=1.56.1
+httpx==0.27.2
 
 # Security
 cryptography==41.0.4
